tests/errors/first_stage/operation/invalid_label_name/invalid_label_name.am
mystr: .string "hi"
prn m$str[2]
